logs/Slang/generated/keywords/5.6.2--keyword_for.sv.log
name: for
description: The 'for' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_for.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_for.sv:8:8: error: expected declarator
    bit for;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_for.sv:8:12: error: expected expression
    bit for;
           ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_for.sv:8:12: error: expected '('
    bit for;
           ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_for.sv:8:13: error: expected ';'
    bit for;
            ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_for.sv:8:13: error: expected ')'
    bit for;
            ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_for.sv:9:1: error: expected expression
endmodule
^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_for.sv:9:1: error: expected expression
endmodule
^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_for.sv:9:1: error: invalid genvar iteration expression
endmodule
^
